--- a/Project 1 Satoker/styles/styles.css
+++ b/Project 1 Satoker/styles/styles.css
@@ -1,13 +1,33 @@
 
-
-
-
-
-
-
-body{
+body{    
     margin: 0;
     width: 0;
+}
+
+/* ======================================    WELCOME PAGE      ============================================== */
+
+.welcomeContainer{
+    background-color: red;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+}
+
+
+
+
+
+
+
+
+/* ======================================    GAME PAGE      ============================================== */
+
+
+
+.gameContainer{
     background-image: url('../images/background.jpg');  
 }
 
