--- a/Project 1 Satoker/styles/styles.css
+++ b/Project 1 Satoker/styles/styles.css
@@ -2,6 +2,7 @@
 body{    
     margin: 0;
     width: 0;
+    background-image: url('../images/background.jpg');  
 }
 
 /* ======================================    WELCOME PAGE      ============================================== */
@@ -54,6 +55,7 @@ body{
     /* Why do i have to use margin auto? Cant flex box take care of this for me? */
     display: flex;
     justify-content: center;
+    padding-top: 75px;
 }
 
 .communityCardSize{}
@@ -76,19 +78,34 @@ body{
     justify-content: space-between;
     flex-wrap: nowrap;
     color: white;
+    font-size: 2em;
 }
 
+.playerProfile{
+    text-align: center;
+    
+}
 
 .playerHand{
-    height: 100px;
+    height: 150px;
   }
   
   .playerHand > img{
       height: 150px;
+      margin-left: 11px;
   }
   
   .playerName{
      
+  }
+
+  .betAmount{
+      color: white;
+      font-size: 2em;
+      height: 30px;
+      z-index: 5;
+      margin: 20px;
+      text-align: center;
   }
 
 
