--- a/Project 1 Satoker/styles/styles.css
+++ b/Project 1 Satoker/styles/styles.css
@@ -9,8 +9,8 @@ body{
 
 
 #startContainer {
-    width: 100%;
-    height: 100%;
+    height: 100vh;
+    width: 100vw;
     background-image: url('../images/startbg.jpg');  
     background-size: cover;
     background-repeat: no-repeat;   
@@ -116,24 +116,33 @@ body{
 }
 
 .gameTitle{
-    color: white;
-    font-size: 6em;
+    color: #fff;
+    font-family: 'Nunito', sans-serif;
+    font-weight: normal;
+    font-size: 2em;
+    padding: 10px 10px 10px 20px;
+    margin-top: 0;
+    margin-bottom: 15px;
     text-align: center;
-    margin-bottom: 25px;
+}
+
+.middlerow{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 #communityCards{
     /* Why do i have to use margin auto? Cant flex box take care of this for me? */
-    display: flex;
-    justify-content: center;
     padding-top: 75px;
 }
 
 .communityCardSize{}
 
 
-.flop-row {
-
+#dealButton{
+    width: auto;
+    height: 30px;
 }
 
 
