--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,10 @@
 
 body{    
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  background-image: url('../images/satoker-table.png');  
+  background-size: cover;
+    background-repeat: no-repeat;   
 }
 
 /* ======================================    Start PAGE      ============================================== */
@@ -9,21 +12,25 @@ body{
 
 
 #startContainer {
-    height: 100%;
-    width: 100%;
-    background-image: url('../images/startbg.jpg');  
-    background-size: cover;
-    background-repeat: no-repeat;   
+  height: 100%;
+  width: 100%;
+  background-image: url('../images/startbg.jpg');  
   }
   
-  .form-container {
+  /* .form-container {
     padding: 35% 40%;
     display: block;
     width: 400px;
-    perspective: 1000;
-  }
+    padding-bottom: 64vh;
+  } */
   
   .login-form {
+    padding-bottom: 64vh;
+  }
+
+  .form-box {
+    width: 30vw;
+    margin-left: 35vw;
     background: rgba(244,146,0, 0.1);
     border: 4px solid #facb7e;
     border-radius: 8px;
@@ -74,18 +81,15 @@ body{
   .login-button {
     width: 100px;
     height: 30px;
-    margin-bottom: 10px;
-    
-   
+    margin-bottom: 10px; 
     border: 4px solid rgba(255, 187, 0, 0.329);
     border-radius: 8px;
     background-size: 500% 100%;
     background: rgba(244,146,0, 0.2);
     box-shadow: inset 0 0 0 0 rgba(20, 196, 148, 1);
-      -webkit-transition: all ease 0.3s;
-      -moz-transition: all ease 0.3s;
-      transition: all ease 0.3s;
-    
+    -webkit-transition: all ease 0.3s;
+    -moz-transition: all ease 0.3s;
+    transition: all ease 0.3s;    
     color: #fff;
     font-family: 'Nunito', sans-serif;
     font-weight: 500;
@@ -100,7 +104,6 @@ body{
 
 
 #gameContainer{
-    background-image: url('../images/background.jpg');  
 }
 
 #screen{
@@ -112,7 +115,8 @@ body{
 #board{
     height: 85vh;
     width: 85vw;  
-    margin: 50px;   
+    margin-top: 50px;
+    margin-left: 150px; 
 }
 
 .gameTitle{
@@ -140,29 +144,35 @@ body{
 }
 
 #potinfo{
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  
   height: 202px;
   width: 250px;
-  background-color: red;
-  border: 3px solid #283966;
+  background-color: rgba(82, 60, 60, 0.26);
+  border: 3px solid #8e0d11;
+  border-radius: 8px;
 }
 
 #potTitle{
+  display: flex;
+  justify-content: center;
   height: 50px;
-  background-color: blue;
+  font-size: 2em;
+  padding-top: 15px;
 }
 
 #potsize{
-
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  padding-top: 25px;
+  font-size: 2.2em;
 }
 
 .cardbackground{
     height: 150px;
     width: 100px;
-    background-color: yellow;
-    border: 3px solid black;
+    background-color: rgba(82, 60, 60, 0.26);
+    border: 3px solid #8e0d11;
 }
 
 #communityCards{
@@ -282,6 +292,23 @@ body{
     padding:12px 37px;
     text-decoration:none;
     text-shadow:0px 1px 0px #346628;
+    }
+
+
+
+    #bottomrow{
+      padding-top: 100px;
+      display: flex;
+      justify-content: center;
+    }
+    
+    #info{
+      height: 202px;
+      width: 1000px;
+      background-color: rgba(82, 60, 60, 0.26);
+      border: 3px solid #8e0d11;
+      border-radius: 8px;
+
     }
 
 
