--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,9 +12,11 @@ body{
 
 
 #startContainer {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   background-image: url('../images/startbg.jpg');  
+  background-repeat: no-repeat;
+  background-size: cover;
   }
   
   /* .form-container {
