--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ body{
 
 #startContainer {
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   background-image: url('../images/startbg.jpg');  
   background-repeat: no-repeat;
   background-size: cover;
